contacts: fix page layout on mobile devices

--- a/htdocs/scss/app/common.scss
+++ b/htdocs/scss/app/common.scss
@@ -119,11 +119,8 @@ table.contacts {
   border: 0;
   border-collapse: collapse;
   margin: 8px auto 0;
-  //width: 100%;
-  //table-layout: fixed;
 }
 table.contacts td {
-  white-space: nowrap;
   padding-bottom: 15px;
   vertical-align: top;
 }
